# nrf51822-zinc

./: .gitmodules  Cargo.toml  LICENSE-MIT  Makefile  README.md  thumbv6m-none-eabi.json
src/: main.rs
